--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: My blog
+title: 我的博客
 ---
 
 <h2>{{ page.title }}</h2>
 
-<p>Rencent</p>
+<p>我的文章</p>
 
 <ul>
     {% for post in site.posts %}
